...
    ) {
        if (isRegistrationSuccess) {
            Snackbar(
                modifier = Modifier.align(Alignment.BottomCenter)
            ) {
                Text(
                    text = "Account successfully registered!"
                )
            }
        }
        Box(
            modifier = Modifier
                .align(Alignment.Center),
...
                    style = MaterialTheme.typography.headlineSmall,
                    color = colorScheme.primary,
                )
                Spacer(modifier = Modifier.height(8.dp))
                RegisterName(
                    name = name,
                    modifier = Modifier.testTag("register_name"),
                    onChange = {
                        name = it
                    }
                )

                Spacer(modifier = Modifier.padding(3.dp))

                RegisterPhone(
                    phone = phone,
                    modifier = Modifier.testTag("register_phone"),
                    onChange = {
                        phone = it
                    }
                )
                Spacer(modifier = Modifier.padding(3.dp))

                RegisterEmail(
                    email = email,
                    isValid = isValidEmail,
                    modifier = Modifier.testTag("register_email"),
                    onChange = {
                        email = it
                    }
                )

                Spacer(modifier = Modifier.padding(3.dp))

                RegisterPassword(
                    password = password,
                    modifier = Modifier.testTag("register_password"),
                    onChange = {
                        password = it
                    }
                )

                Spacer(modifier = Modifier.padding(3.dp))

                RegisterPasswordConfirm(
                    confirmPassword = confirmPassword,
                    modifier = Modifier.testTag("register_confirm_password"),
                    onChange = {
                        confirmPassword = it
                    }
                )


...
                    text = "Sign Up",
                    onClick = {
                        if (password != confirmPassword) {
                            showAlertDialog(
                                AlertDialogModel(
                                    "Attention",
                                    "Password and confirm password do not match",
                                    "OK",
                                    {},
                                    {})
                            )
                            return@RegisterSignupButton
                        } else if (name.isEmpty() || email.isEmpty() || phone.isEmpty() || password.isEmpty()) {
                            showAlertDialog(
                                AlertDialogModel(
                                    title = "Attention",
                                    message = "Please fill all the fields",
                                    confirmButtonText = "OK",
                                    onConfirmClick = { },
                                    onDismissClick = { }
                                )
                            )
                        } else if (!isValidEmail) {
                            showAlertDialog(
                                AlertDialogModel(
                                    title = "Attention",
                                    message = "Email is not valid",
                                    confirmButtonText = "OK",
                                    onConfirmClick = { },
                                    onDismissClick = { }
                                )
                            )
                        } else if (password.length <6) {
                            showAlertDialog(
                                AlertDialogModel(
                                    title = "Attention",
                                    message = "Password must be at least 6 characters",
                                    confirmButtonText = "OK",
                                    onConfirmClick = { },
                                    onDismissClick = { }
                                )
                            )
                        }
...
                                password = password,
                                phone = phone
                            )
                            viewModel.registerUser(user)
                        }
                    },
                    modifier = Modifier.testTag("register_button")

                )

                Spacer(modifier = Modifier.padding(10.dp))
                TextButton(onClick = { onSignInClick() }) {
                    Text(
...

                LaunchedEffect(key1 = state.value?.isError) {
                    if (!state.value?.isError.isNullOrEmpty()) {
                        showAlertDialog(
                            AlertDialogModel(
                                title = "Attention",
                                message = "The email address is already in use by another account.",
                                confirmButtonText = "OK",
                                onConfirmClick = { },
                                onDismissClick = { }
                            )
                        )
                    }
...

            }

        }
        if (state.value?.isLoading == true) {
            CircularProgressIndicator(
                modifier = Modifier.align(Alignment.Center).testTag("loading_indicator")
            )
        }
    }
}
