...
                    }
                )

                Spacer(modifier = Modifier.padding(10.dp))
                TextButton(onClick = { onCreateAccountClick() }) {
                    Text(
                        text = "Create An Account",
                        letterSpacing = 1.sp,
                        style = MaterialTheme.typography.labelLarge
                    )
                }
                
                LaunchedEffect(key1 = state.value?.isSuccess) {
...
